--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                   <p>J'entre à l'Ecole Normale Supérieure de la rue d'Ulm en septembre 2019 au département de Physique. En plus des cours de physique, je profite de ce milieu et de la liberté qu'il offre pour faire des Sciences Comportementales, de la Biologie, de l'Histoire de l'Ecologie Transdisciplinaire et de l'Economie entre autre. 
                   <h3>Personalité et centres d'interêts</h3>
                   <p>
-                  Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'emergence de phénomènes d'ensembles non linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithme des réseaux).</p>
+                  Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'émergence de phénomènes d'ensembles non-linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithme des réseaux).</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/ID.jpg" class="img-responsive" alt="">
