--- a/M1.html
+++ b/M1.html
@@ -71,7 +71,7 @@
           <div class="text-center">
             <h1 class="h2">Ecosystème d'ADN Proies-Prédateurs</h1>
             <h3>Dans des gouttes pour du calcul massivement parallèle</h3>
-            <p>Etude réalisé dans le cadre de mon stage de M1 en partenariat avec le LIMMS basé à l'Université de Tokyo. Le travail repose sur l'étude d'un système dynamique hautement non linéaire simulant le comportement d'un système chimique à ADN. L'unité travaille sur la possibilité de faire du calcul massivement parrallèle avec des calculateur à ADN. Ce type de système pourrait avoir de nombreuse application pour résoudre des problèmes combinatoires en biologie ou pour la santé.
+            <p>Etude réalisé dans le cadre de mon stage de M1 en partenariat avec le LIMMS basé à l'Université de Tokyo. Le travail repose sur l'étude d'un système dynamique hautement non-linéaire simulant le comportement d'un système chimique à ADN. L'unité travaille sur la possibilité de faire du calcul massivement parallèle avec des calculateurs à ADN. Ce type de système pourrait avoir de nombreuses applications pour résoudre des problèmes combinatoires en biologie ou pour la santé.
           </div>
 
           <!--<blockquote>
