--- a/Bottle.html
+++ b/Bottle.html
@@ -69,7 +69,7 @@
           <div class="text-center">
             <h1 class="h2">Etude du Bottle flip Challenge</h1>
             <h3> Ou comment ralentir un objet sans lui appliquer de force </h3>
-            <p>Etude réalisé dans le cadre du TIPE 2018 (travaux scientifiques encadrées en classe préparatoire). L'étude portait sur la physique cachée derrière le Bottle Flip Challenge, un jeu simple se jouant avec une bouteille d'eau. L'étude est délicate car principalement phénoménologique (mesures et simulations numériques) mais impossible de modéliser simplement les mouvements d'eau dans la bouteille. Ce travail a fait l'objet d'un article dans le Bulletin de l'Union des physicien. </p>
+            <p>Etude réalisé dans le cadre du TIPE 2018 (travaux scientifiques encadrés en classe préparatoire). L'étude portait sur la physique cachée derrière le Bottle Flip Challenge, un jeu simple se jouant avec une bouteille d'eau. L'étude est délicate car principalement phénoménologique (mesures et simulations numériques) mais impossible de modéliser simplement les mouvements d'eau dans la bouteille. Ce travail a fait l'objet d'un article dans le Bulletin de l'Union des physiciens. </p>
             <p><a href="publication BUP.pdf" class="btn btn-primary btn-lg">Télécharger l'article</a></p> 
           </div>
 
