--- a/works.html
+++ b/works.html
@@ -100,7 +100,7 @@
                       <div class="card-container card-container-lg">
                         <h4>TIPE 2017</h4>
                         <h3>Etude de l'Effet Leindenfrost</h3>
-                        <p>Etude principalement centrée sur l'étude des oscillation en étoile apparaissant spontanément sous certaines conditions.</p>
+                        <p>Etude principalement centrée sur l'étude des oscillations en étoile apparaissant spontanément sous certaines conditions.</p>
                         <a href="./cale.html" title="" class="btn btn-default">En savoir plus</a>
                       </div>
                     </div>   
