--- a/cale.html
+++ b/cale.html
@@ -68,7 +68,7 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">Etude de l'effet Leindenfrost</h1>
-            <p align="center">Travaux réalisé dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
+            <p align="center">Travaux réalisés dans le cadre du TIPE 2017. Dans certaines conditions (température élevée et fort confinement de la goutte), la goutte en caléfaction se met spontanément à osciller à haute fréquence (~10 Hz) sous forme d'étoile ayant entre 2 et 10 branches. Nous avons pu proposer un modèle pour rendre compte de ce phénomène et obtenu le champ de vitesse dans la goutte.</p>
           </div>
 
           <!--<blockquote>
