--- a/cours.html
+++ b/cours.html
@@ -121,10 +121,10 @@
               <h3 class="template-title-example">Autres</h3>
               <ul>
                 <li>Histoire de l'antiquité : La ville dans le monde romain</li>
-                <li>Paléo-climat et Paléo-environements</li>
+                <li>Paléo-climat et Paléo-environnements</li>
                 <li>Economie pour scientifiques</li>
                 <li>Négociations climatiques, géopolitique du climat et COP</li>
-                <li>Les grands débats de l'environement</li>
+                <li>Les grands débats de l'environnement</li>
                 <li>Permaculture</li>
                 <li>Anglais pour la recherche</li>
                 <li>Japonais</li>
