--- a/Albums.html
+++ b/Albums.html
@@ -73,7 +73,7 @@
 
                     <div class="col-sm-4">
                       <a href="./Paris_j_20.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/Argentique/10.jpg" alt="" class="img-responsive">
+                        <img src="./assets/images/Argentique/errances/10.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>Janvier 2020</h4>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="col-sm-4">
                       <a href="./stm_j_20.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/Argentique/20.jpg" alt="" class="img-responsive">
+                        <img src="./assets/images/Argentique/stmartin/20.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>Janvier 2020</h4>
@@ -94,31 +94,31 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <a href="./divers.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/Argentique/30.jpg" alt="" class="img-responsive">
+                      <a href="./manif1.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/Argentique/manif1/45.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>Divers</h4>
-                        <h3>Photos d'horizons variés</h3>
-                        <p>Sans dates ni catégories, juste pour le plaisir des yeux.</p>
-                        <a href="./divers.html" title="" class="btn btn-default">Voir la collection</a>
+                        <h4>Manifestation climat</h4>
+                        <h3>du 28 mars 2020</h3>
+                        <p>Marche pour le climat en companie du Climatophone</p>
+                        <a href="./manif1.html" title="" class="btn btn-default">Voir la collection</a>
                       </div>
                     </div>   
                 </div>
                 <!--/row-->
             </div>
             <!--/item-->
-            <!--<div class="item">
+            <div class="item">
                 <div class="row">
                   <div class="col-sm-4">
-                      <a href="./work.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/cover bfc r.jpg" alt="" class="img-responsive">
+                      <a href="./divers.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/Argentique/divers/30.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>Stage L3</h4>
-                        <h3>Instrumentation de colonnes de sols</h3>
-                        <p>Conception d'un système d'enregistrement en continu pour un nouveau type de colonne de sol à l'Ecotron d'Ile de France en juillet 2020</p>
-                        <a href="./L3.html" title="" class="btn btn-default">En savoir plus</a>
+                        <h4>Divers</h4>
+                        <h3>Photos d'horizons variés</h3>
+                        <p>Sans dates ni catégories, juste pour le plaisir des yeux.</p>
+                        <a href="./divers.html" title="" class="btn btn-default">Voir la collection</a>
                       </div>
                     </div>
                    <!--<div class="col-sm-4">
