--- a/divers.html
+++ b/divers.html
@@ -65,18 +65,39 @@
         <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/Argentique/2.jpg" class="img-responsive" alt="">
         </div>-->
-        <img src="./assets/images/Argentique/13.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/13.jpg" class="img-responsive" alt="">
         <p align="right">Voyage</p>
-        <img src="./assets/images/Argentique/14.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/14.jpg" class="img-responsive" alt="">
         <p align="right">Vue I</p>
-        <img src="./assets/images/Argentique/27.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/27.jpg" class="img-responsive" alt="">
         <p align="right">L'offre</p>
-        <img src="./assets/images/Argentique/28.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/28.jpg" class="img-responsive" alt="">
         <p align="right">Skijooring</p>
-        <img src="./assets/images/Argentique/29.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/29.jpg" class="img-responsive" alt="">
         <p align="right">Vue II</p>
-        <img src="./assets/images/Argentique/30.jpg" class="img-responsive" alt="">
-        <p align="right">Portraits</p>
+        <img src="./assets/images/Argentique/divers/43.jpg" class="img-responsive" alt="">
+        <p align="right">l'Allée</p>
+        <img src="./assets/images/Argentique/divers/46.jpg" class="img-responsive" alt="">
+        <p align="right">Bleu I</p>
+        <img src="./assets/images/Argentique/divers/45.jpg" class="img-responsive" alt="">
+        <p align="right">Bleu II</p>
+        <img src="./assets/images/Argentique/divers/47.jpg" class="img-responsive" alt="">
+        <p align="right">Reflets</p>
+        <img src="./assets/images/Argentique/errances/12_bis.jpg" class="img-responsive" alt="">
+        <p align="right">Mille-feuille</p>
+        <img src="./assets/images/Argentique/divers/48.jpg" class="img-responsive" alt="">
+        <p align="right">Horizon</p>
+        <img src="./assets/images/Argentique/divers/49.jpg" class="img-responsive" alt="">
+        <p align="right">Le Totem</p>
+        <img src="./assets/images/Argentique/divers/50.jpg" class="img-responsive" alt="">
+        <p align="right">Organique</p>
+        <img src="./assets/images/Argentique/divers/51.jpg" class="img-responsive" alt="">
+        <p align="right">Les Silos</p>
+        <img src="./assets/images/Argentique/divers/52.jpg" class="img-responsive" alt="">
+        <p align="right">Le Tricolore</p>
+        <img src="./assets/images/Argentique/divers/53.jpg" class="img-responsive" alt="">
+        <p align="right">Immobile</p>
+
       </div>
       <!--<div class="row">
         <p></p>
