--- a/divers.html
+++ b/divers.html
@@ -85,17 +85,17 @@
         <p align="right">Reflets</p>
         <img src="./assets/images/Argentique/errances/12_bis.jpg" class="img-responsive" alt="">
         <p align="right">Mille-feuille</p>
-        <img src="./assets/images/Argentique/divers/48.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/48.JPG" class="img-responsive" alt="">
         <p align="right">Horizon</p>
-        <img src="./assets/images/Argentique/divers/49.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/49.JPG" class="img-responsive" alt="">
         <p align="right">Le Totem</p>
-        <img src="./assets/images/Argentique/divers/50.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/50.JPG" class="img-responsive" alt="">
         <p align="right">Organique</p>
-        <img src="./assets/images/Argentique/divers/51.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/51.JPG" class="img-responsive" alt="">
         <p align="right">Les Silos</p>
-        <img src="./assets/images/Argentique/divers/52.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/52.JPG" class="img-responsive" alt="">
         <p align="right">Le Tricolore</p>
-        <img src="./assets/images/Argentique/divers/53.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/53.JPG" class="img-responsive" alt="">
         <p align="right">Immobile</p>
 
       </div>
