--- a/divers.html
+++ b/divers.html
@@ -75,13 +75,13 @@
         <p align="right">Skijooring</p>
         <img src="./assets/images/Argentique/divers/29.jpg" class="img-responsive" alt="">
         <p align="right">Vue II</p>
-        <img src="./assets/images/Argentique/divers/43.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/43.JPG" class="img-responsive" alt="">
         <p align="right">l'Allée</p>
-        <img src="./assets/images/Argentique/divers/46.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/46.JPG" class="img-responsive" alt="">
         <p align="right">Bleu I</p>
-        <img src="./assets/images/Argentique/divers/45.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/45.JPG" class="img-responsive" alt="">
         <p align="right">Bleu II</p>
-        <img src="./assets/images/Argentique/divers/47.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/divers/47.JPG" class="img-responsive" alt="">
         <p align="right">Reflets</p>
         <img src="./assets/images/Argentique/errances/12_bis.jpg" class="img-responsive" alt="">
         <p align="right">Mille-feuille</p>
