--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NMFQLC2G9N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NMFQLC2G9N');
+</script>
+
 <!-- Add your content of header -->
 <header>
   <nav class="navbar  navbar-fixed-top navbar-inverse">
