--- a/Bottle.html
+++ b/Bottle.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -69,7 +69,9 @@
           <div class="text-center">
             <h1 class="h2">Etude du Bottle flip Challenge</h1>
             <h3> Ou comment ralentir un objet sans lui appliquer de force </h3>
-            <p>Etude réalisé dans le cadre du TIPE 2018 (travaux scientifiques encadrés en classe préparatoire). L'étude portait sur la physique cachée derrière le Bottle Flip Challenge, un jeu simple se jouant avec une bouteille d'eau. L'étude est délicate car principalement phénoménologique (mesures et simulations numériques) mais impossible de modéliser simplement les mouvements d'eau dans la bouteille. Ce travail a fait l'objet d'un article dans le Bulletin de l'Union des physiciens. </p>
+            <p>Etude réalisé dans le cadre du TIPE 2018 (travaux scientifiques encadrées en classe préparatoire). L'étude portait sur la physique cachée derrière le Bottle Flip Challenge, un jeu simple se jouant avec une bouteille d'eau. L'étude est délicate car principalement phénoménologique (mesures et simulations numériques) mais impossible de modéliser simplement les mouvements d'eau dans la bouteille. Ce travail a fait l'objet d'un article dans le Bulletin de l'Union des physicien.
+            <br>
+            Le travail réalisé dans le cadre de ce TIPE a été publié dans le Bulletin de l'Union des Physiciens.</p>
             <p><a href="publication BUP.pdf" class="btn btn-primary btn-lg">Télécharger l'article</a></p> 
           </div>
 
@@ -83,11 +85,11 @@
       
       
         <div class="row">
-            <img src="./assets/images/bottle 1.JPG" class="img-responsive" alt="">
+            <img src="./assets/images/bottle 1.jpg" class="img-responsive" alt="">
             <p align='center'>Evolution de la vitesse angulaire pour différents remplissages</p>
         </div>
         <div class="row">
-            <img src="./assets/images/bottle 2.JPG" class="img-responsive" alt="">
+            <img src="./assets/images/bottle 2.jpg" class="img-responsive" alt="">
             <p align='center'>Chronophotographie d'un lancer</p>
         </div>
       </div>
