--- a/M1.html
+++ b/M1.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -71,7 +71,8 @@
           <div class="text-center">
             <h1 class="h2">Ecosystème d'ADN Proies-Prédateurs</h1>
             <h3>Dans des gouttes pour du calcul massivement parallèle</h3>
-            <p>Etude réalisé dans le cadre de mon stage de M1 en partenariat avec le LIMMS basé à l'Université de Tokyo. Le travail repose sur l'étude d'un système dynamique hautement non-linéaire simulant le comportement d'un système chimique à ADN. L'unité travaille sur la possibilité de faire du calcul massivement parallèle avec des calculateurs à ADN. Ce type de système pourrait avoir de nombreuses applications pour résoudre des problèmes combinatoires en biologie ou pour la santé.
+            <p align="center"><a href="publi_M1.pdf" class="btn btn-primary btn-lg">Télécharger l'article</a></p>
+            <p>Etude réalisé dans le cadre de mon stage de M1 en partenariat avec le LIMMS basé à l'Université de Tokyo. Le travail repose sur l'étude d'un système dynamique hautement non linéaire simulant le comportement d'un système chimique à ADN. L'unité travaille sur la possibilité de faire du calcul massivement parrallèle avec des calculateur à ADN. Ce type de système pourrait avoir de nombreuse application pour résoudre des problèmes combinatoires en biologie ou pour la santé.
           </div>
 
           <!--<blockquote>
