--- a/Paris_j_20.html
+++ b/Paris_j_20.html
@@ -65,49 +65,54 @@
         <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/Argentique/2.jpg" class="img-responsive" alt="">
         </div>-->
-        <img src="./assets/images/Argentique/errances/1.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/1.jpg" class="img-responsive" alt="">
         <p align="right">Vitesse</p>
-        <img src="./assets/images/Argentique/errances/2.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/2.jpg" class="img-responsive" alt="">
         <p align="right">Le retour</p>
-        <img src="./assets/images/Argentique/errances/1_bis.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/1_bis.jpg" class="img-responsive" alt="">
         <p align="right">Ouverture</p>
       </div>
       <div class="row">
         <p></p>
         <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/Argentique/errances/3.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/Argentique/3.jpg" class="img-responsive" alt="">
                   <p align="right">Face à Face</p>
         </div>
         <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/Argentique/errances/4.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/Argentique/4.jpg" class="img-responsive" alt="">
                   <p align="right">Remembrance</p>
         </div>
       </div>
       <div class="row">
         <p></p>
-        <img src="./assets/images/Argentique/errances/5.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/5.jpg" class="img-responsive" alt="">
         <p align="right">Le mur</p>
-        <img src="./assets/images/Argentique/errances/6.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/6.jpg" class="img-responsive" alt="">
         <p align="right">Reflets</p>
-        <img src="./assets/images/Argentique/errances/7.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/7.jpg" class="img-responsive" alt="">
         <p align="right">Samedi</p>
-        <img src="./assets/images/Argentique/errances/8.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/8.jpg" class="img-responsive" alt="">
         <p align="right">Les pendus</p>
-        <img src="./assets/images/Argentique/errances/9.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/9.jpg" class="img-responsive" alt="">
         <p align="right">Regard</p>
-        <img src="./assets/images/Argentique/errances/10.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/Argentique/10.jpg" class="img-responsive" alt="">
         <p align="right">Pied à terre</p>
       </div>
       <div class="row">
         <p></p>
         <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/Argentique/errances/11.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/Argentique/11.jpg" class="img-responsive" alt="">
                   <p align="right">Neige I</p>
         </div>
         <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/Argentique/errances/12.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/Argentique/12.jpg" class="img-responsive" alt="">
                   <p align="right">Neige II</p>
         </div>
+      </div>
+      <div class="row">
+        <p></p>
+        <img src="./assets/images/Argentique/12_bis.jpg" class="img-responsive" alt="">
+        <p align="right">Mille-feuille</p>
       </div>
     </div>
   </div>
