--- a/cours.html
+++ b/cours.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -58,32 +58,51 @@
           <div class="section-container-spacer text-center">
             <h1 class="h2">Formation Académique</h1>
           </div>
+          Liste non exhaustive des cours suivis pendant ma scolarité.
           
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
               <h3 class="template-title-example">Physique</h3>
               <ul>
                 <table>
-                  <td>
-                    <li>Matière molle et interfaces</li>
-                    <li>Hydrodynamique</li>
-                    <li>Biophysique</li>
-                    <li>Physique expérimentale</li>
-                    <li>Physique statistique des systèmes en équilibre</li>
+                  <td style="padding-right: 50px">
+                    <li>Systèmes complexes : de la Physique aux Sciences Sociales</li>
+                    <li>Matière Active et Comportement Collectifs</li>
+                    <li>Physique des Fluides et Physique non Linéaire</li>
+                    <li>Relativité et Electromagnétisme</li>
+                    <li>Introduction à la mécanique quantique</li>
+                    <li>Physique statistique avancée</li>
                     <li>Systèmes dynamiques : dynamique déterministe et fluctuations</li>
-                    <li>Physique du solide</li>
+                    <li>Matière molle et interfaces</li>
+                    <li>Circuits et Dynamiques des réseaux en Biologie Synthétique<br>et en Neurosciences</li>
+                    <li>Biophysique avancée</li>
                   </td>
                   <td>
+                    <li>Ecologie, Evolution, Epidémiologie</li>
                     <li>Ordre de grandeur et méthode perturbative</li>
-                    <li>Transitions de phase</li>
+                    <li>Elements de mécanique analytique</li>
                     <li>Mathématiques pour physiciens</li>
                     <li>Probabilité</li>
-                    <li>Elements de mécanique analytique</li>
-                    <li>Introduction à la mécanique quantique</li>
-                    <li>Relativité et électromagnétisme</li>
+                    <li>Transitions de phase</li>
+                    <li>Physique expérimentale</li>
+                    <li>Biophysique</li>
+                    <li>Physiquer du Solide</li>
                   </td>
                 </table>
               </ul>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <h3 class="template-title-example">Environnement et Sociétés</h3>
+                <ul>
+                  <li>Penser la Transition</li>
+                  <li>Paléo-climat et Paléo-environements</li>
+                  <li>Négociations climatiques, géopolitique du climat et COP</li>
+                  <li>Les grands débats de l'environement</li>
+                  <li>Permaculture</li>
+                  <li>Psychologie et Environnement</li>
+                </ul>
             </div>
           </div>
           <div class="row">
@@ -120,12 +139,9 @@
             <div class="col-md-6">
               <h3 class="template-title-example">Autres</h3>
               <ul>
+                <li>Cacher/Montrer, L'oeuvre et ses usages</li>
                 <li>Histoire de l'antiquité : La ville dans le monde romain</li>
-                <li>Paléo-climat et Paléo-environnements</li>
                 <li>Economie pour scientifiques</li>
-                <li>Négociations climatiques, géopolitique du climat et COP</li>
-                <li>Les grands débats de l'environnement</li>
-                <li>Permaculture</li>
                 <li>Anglais pour la recherche</li>
                 <li>Japonais</li>
               </ul>
