--- a/works.html
+++ b/works.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -58,7 +58,7 @@
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
           <h1 class="h2">Travaux</h1>
-          <p>Présentation des travaux réalisé lors de stages ou de travaux scientifiques encadrés</p>
+          <p><h3>Présentation des divers travaux et projets réalisés ces dernières années</h3></p>
         </div>
       </div>
 
@@ -71,6 +71,29 @@
             <div class="item active">
                 <div class="row">
 
+
+                    <div class="col-sm-4">
+                      <a href="./COP.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/COP_carre.jpeg" alt="" class="img-responsive">
+                      </a>
+                    <div class="card-container card-container-lg">
+                        <h4>Sharm-El-Sheik, Egypte</h4>
+                        <h3>Observateur à la COP 27</h3>
+                        <p>Observateur accrédité par l'ONU et l'ENS et réalisation d'un documentaire sur nos regards vers l'avenir.</p>
+                        <a href="./COP.html" title="" class="btn btn-default">En savoir plus</a>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <a href="./JFA.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/JFA1.jpeg" alt="" class="img-responsive">
+                      </a>
+                    <div class="card-container card-container-lg">
+                        <h4>Laboratoire de Physique de l'ENS</h4>
+                        <h3>Manipulation de molécules uniques par pince magnétique</h3>
+                        <p>Analyse de l'influence de molécules de la famille des flavoïdes sur la stabilité de complexes formé sur de l'ADN.</p>
+                        <a href="./JFA.html" title="" class="btn btn-default">En savoir plus</a>
+                      </div>
+                    </div>
                     <div class="col-sm-4">
                       <a href="./M1.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/suivi.PNG" alt="" class="img-responsive">
@@ -78,18 +101,25 @@
                       <div class="card-container card-container-lg">
                         <h4>Université de Tokyo</h4>
                         <h3>Calcul par système dynamique d'ADN</h3>
-                        <p>Travaux dans le cadre de mon stage de M1 sur des écosystèmes dynamiques Proies-Prédateurs d’ADN pour faire du calcul de réservoir.</p>
+                        <p>Travaux réalisés dans le cadre de mon stage de M1 sur des écosystèmes dynamiques Proies-Prédateurs d’ADN pour faire du calcul de réservoir.</p>
                         <a href="./M1.html" title="" class="btn btn-default">En savoir plus</a>
                       </div>
                     </div>
-                    <div class="col-sm-4">
+                      
+                </div>
+                <!--/row-->
+            </div>
+            <!--/item-->
+            <div class="item">
+                <div class="row">
+                  <div class="col-sm-4">
                       <a href="./Bottle.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/R=025.JPG" alt="" class="img-responsive">
+                        <img src="./assets/images/R=0.25.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>TIPE 2018</h4>
                         <h3>Etude du Bottle Flip Challenge</h3>
-                        <p>Analyse par divers moyens de la physique derrière ce défi populaire. </p>
+                        <p>Analyse par divers moyens de la physique derrière ce défi populaire.</p>
                         <a href="./Bottle.html" title="" class="btn btn-default">En savoir plus</a>
                       </div>
                     </div>
@@ -100,16 +130,10 @@
                       <div class="card-container card-container-lg">
                         <h4>TIPE 2017</h4>
                         <h3>Etude de l'Effet Leindenfrost</h3>
-                        <p>Etude principalement centrée sur l'étude des oscillations en étoile apparaissant spontanément sous certaines conditions.</p>
+                        <p>Etude principalement centrée sur l'étude des oscillation en étoile apparaissant spontanément sous certaines conditions.</p>
                         <a href="./cale.html" title="" class="btn btn-default">En savoir plus</a>
                       </div>
-                    </div>   
-                </div>
-                <!--/row-->
-            </div>
-            <!--/item-->
-            <div class="item">
-                <div class="row">
+                    </div> 
                   <div class="col-sm-4">
                       <a href="./L3.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/cover L3.jpg" alt="" class="img-responsive">
