--- a/L3.html
+++ b/L3.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -58,7 +58,7 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">Instrumentation de nouvelles colonnes de sol</h1>
-            <p> Travail réalisé dans le cadre de mon stage de L3. L'ENS dispose d'un laboratoire appelé Ecotron situé proche de Nemours. Ce laboratoire est capable de simuler divers environnements naturels pour étudier l'influence du stress environnemental subit par divers animaux et plantes. J'ai développé un système pour suivre automatiquement sur plusieurs jours le taux d'eau et de CO2 présent à divers endroits de colonnes de sol.  
+            <p> Travail réalisé dans le cadre de mon stage de L3. L'ENS dispose d'un laboratoire appelé Ecotron situé proche de Nemours. Ce laboratoire est capable de simuler divers environements naturels pour étudier l'influence du stress environemental subit par divers animaux et plantes. J'ai développé un système pour suivre automatiquement sur plusieurs jours le taux d'eau et de CO2 présent à divers endroit de colonnes de sol.  
           </div>
         </div>
       </div>
