--- a/about.html
+++ b/about.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -60,20 +60,23 @@
           </div>
           
           <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-15 col-md-offset-1">
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <p align="center"><a href="CV_Fr.pdf" class="btn btn-primary btn-lg">Télécharger mon CV</a></p>
-                  <h3>Les débuts</h3>
-                  <p>Je suis né fin 98 à Fontainebleau et j'y passe mes premières années. En 2006 je pars vivre en Guadeloupe pendant 4 ans. Puis je rentre en métropole au collège Francois Premier à Fontainebleau. A l'issue de mon BAC Scientifique j'entre au Lycée Masséna à Nice en PCSI.</p>
-                  <h3>Entrée à Normale</h3>
-                  <p>J'entre à l'Ecole Normale Supérieure de la rue d'Ulm en septembre 2019 au département de Physique. En plus des cours de physique, je profite de ce milieu et de la liberté qu'il offre pour faire des Sciences Comportementales, de la Biologie, de l'Histoire de l'Ecologie Transdisciplinaire et de l'Economie entre autre. 
-                  <h3>Personalité et centres d'interêts</h3>
+                  <br>
+                  <h3>Présentation</h3>
+                  <p>Je m'appelle Adrien Fauste-Gay, je suis normalien étudiant en quatrième année à l'École Normale Supérieure de la rue d'Ulm. Je suis rattaché au département de Physique et je prépare cette année mon Master 2 en Bio-Physique. Ce Master forme à la modélisation et à l'étude des systèmes vivants, très riches et complexes dans leurs comportements. Cela amène à étudier des matières aussi diverses que la physique statistique, la dynamique des populations ou l'analyse de systèmes complexes par exemple. 
+                  <br>
+                  Je profite par ailleurs de l’environnement hautement pluridisciplinaire de l’ENS pour étudier d’autres sujets : histoire, économie, informatique... J'ai notamment suivi un grand nombre de cours au département "Environnement et Société" qui traite des questions écologiques avec un prisme pluridisciplinaire (scientifique, juridique, philosophique...).</p>
+                  <h3>Projets</h3>
+                  <p>Je pense que notre rapport à la Nature doit être questionné. Nous arrivons aujourd'hui à la limite d'un modèle de production et de répartition des richesses. Si nous ne voulons pas vivre sans retour possible dans un monde instable, autant sur le plan climatique que social, il faut entamer dès aujourd'hui une transition. De par ma formation, j'ai longtemps pensé travailler dans la recherche sur des sujets liés au climat ou sur des sujets plus fondamentaux. Mais en novembre dernier, j'ai eu la chance d'être envoyé par l'ENS en observateur à la COP 27. Ce voyage m'a profondément marqué par la nature de l'évènement et des rencontres que j'ai faites. Le choix de carrière est un élément important. Je pense que les scientifiques ont la responsabilité de contribuer, un rôle à jouer et une vraie plus value à apporter sur ces questions.</p>
+                  <!--<h3>Personalité et centres d'interêts</h3>
                   <p>
-                  Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'émergence de phénomènes d'ensembles non-linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithme des réseaux).</p>
+                  Je travaille principalement sur les systèmes dynamiques complexes et en particulier l'emergence de phénomènes d'ensembles non linéaires à partir d'éléments pourtant simples. On retrouve ces mécanismes en Biologie (écologie), Physique (transition de phase), Informatique (algorithmes des réseaux).</p>-->
                 </div>
-                <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/ID.jpg" class="img-responsive" alt="">
+                <div class="col-xs-15 col-md-6">
+                  <img src="./assets/images/ID.JPG" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
