--- a/cale.html
+++ b/cale.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
