--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
           <li><a href="./about.html" title="">02 : A propos</a></li>
           <li><a href="./works.html" title="">03 : Travaux</a></li>
           <li><a href="./cours.html" title="">04 : Formation Académique</a></li>
-          <li><a href="./Albums.html" title="">05 : Photos</a></li>
-          <li><a href="./contact.html" title="">06 : Contact</a></li>
+          <!--<li><a href="./Albums.html" title="">05 : Photos</a></li>-->
+          <li><a href="./contact.html" title="">05 : Contact</a></li>
         </ul>
 
 
@@ -81,26 +81,28 @@
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          adrien.gay at ens.psl.eu
+                          adrien.gay@ens.psl.eu
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                           </span>
                           45 rue d'Ulm, Paris, 75005
-                        </li>
-                      </ul>
+                        
                       <!--<h3>Follow me on social networks</h3>
                       <a href="http://www.facebook.com" title="" class="fa-icon">
                         <i class="fa fa-facebook"></i>
                       </a>
                       <a href="http://www.twitter.com" title="" class="fa-icon">
                         <i class="fa fa-twitter"></i>
-                      </a>
+                      </a>-->
+                      <br>
                       <a href="http://www.linkedin.com" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      -->
+                        <i class="fa fa-linkedin"></i> 
+                      </a> Adrien Fauste-Gay
+                      
+                      </li>
+                      </ul>
                     </div>
                   </div>
                 </form>
