--- a/index.html
+++ b/index.html
@@ -24,17 +24,6 @@
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NMFQLC2G9N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-NMFQLC2G9N');
-</script>
-
 <!-- Add your content of header -->
 <header>
   <nav class="navbar  navbar-fixed-top navbar-inverse">
@@ -52,7 +41,7 @@
           <li><a href="./about.html" title=""><p style="color:black;">02 : A propos</p></a></li>
           <li><a href="./works.html" title=""><p style="color:black;">03 : Travaux</p></a></li>
           <li><a href="./cours.html" title=""><p style="color:black;">04 : Formation Académique</p></a></li>
-          <li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>
+          <!--<li><a href="./Albums.html" title=""><p style="color:black;">05 : Photos</p></a></li>-->
           <li><a href="./contact.html" title=""><p style="color:black;">06 : Contact</p></a></li>
           <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
         </ul>
@@ -69,10 +58,13 @@
         <div class="col-xs-12">
           <div class="hero-full-wrapper">
             <div class="text-content">
-              <h1>Bienvenue,<br>
+              <h1>
                 <span id="typed-strings">
-                  <span>Sur la page d'Adrien Fauste-Gay</span>
-                  <span>Sur la page d'un normalien physicien</span>
+                  <span>Bienvenue,<br>
+                  Sur la page d'Adrien Fauste-Gay</span>
+                  <span>Physique, Systèmes complexes</span>
+                  <span>Ecologie, Modélisation, Transition</span>
+                  <span>Dynamique des réseaux, Comportements collectifs</span>
                 </span>
                 <span id="typed"></span>
               </h1>
